TestReport: change `reports` to LinkedList
- the last element can be accessed directly
- no need for ArrayList's random access,
  avoids ArrayList's undesired grow behaviour